# cynergists-ai-production

./: .env.example  .env.local  .gitignore  AGENTS.md  CHECK_PRODUCTION_ISSUE.md  CLAUDE.md  COMPLETE_REFACTOR_GUIDE.md  CYNESSA.md  CYNESSA_AGENT_KNOWLEDGE_TEST.md  DEPLOYMENT_READY.md  DEPLOY_ALL.sh  DEPLOY_CYNESSA_TOOL.md  DEPLOY_MANUAL.md  EMERGENCY_FIX.md  FINAL_DEPLOYMENT.md  IDEVAFFILIATE_IMPLEMENTATION.md  IDEV_TESTING_GUIDE.md  PORTAL_CHANGES_STATUS.md  POST_DEPLOYMENT_TESTS.md  PROJECT_CHECKLIST.md  REFACTOR_COMPLETE.md  REFACTOR_STATUS.md  START_REFACTOR.sh  SUPABASE_MIGRATION_COMPLETE.md  SUPABASE_TO_MYSQL_REFACTOR.md  VOICE_MODE.md  check-user-created-event.php  composer.json  fix-carbon-image.sql  package-lock.json  package.json  phpunit.xml  project.md  refactor-remaining.sh  tsconfig.json  update_template.php  vite.config.ts
.cursor/: mcp.json
bootstrap/: app.php  providers.php
config/: ai.php  idevaffiliate.php  inertia.php  prism.php  pulse.php  sanctum.php  seo_engine.php  square.php  (+1 more)
optix/: .env.example  README.md  pyproject.toml
optix/optix/: cli.py  config.py  db.py  llm.py  main.py  models.py  orchestrator.py  schemas.py
optix/optix.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
optix/optix/data/: seed_channel_bible.json
optix/optix/modules/: __init__.py  analytics.py  ideation.py  packaging.py  publishing.py  research.py  scripting.py
optix/optix/prompts/: analytics.md  channel_bible.md  idea_scoring.md  packaging.md  scripting.md
optix/optix/services/: youtube.py
optix/tests/: test_optix_flow.py  test_scoring.py
(+1283 files in other folders)
